welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:10: error: not found: value PrendBiscuit
        	PrendBiscuit()
                ^